# castep-seeding

./: .gitignore  Cargo.toml  README.md
castep-seeding-app/: Cargo.toml
castep-seeding-app/src/: main.rs
castep-seeding-derive/: Cargo.toml
castep-seeding-derive/src/: lib.rs
src/: error.rs  lib.rs  root.rs
src/param/: mod.rs  template.rs
src/param/band_structure/: bs_eigenvalue_tol.rs  bs_extra_bands.rs  bs_max_cg_steps.rs  bs_max_iter.rs  bs_nbands.rs  bs_re_est_k_scrn.rs  bs_write_eigenvalues.rs  bs_xc_functional.rs  mod.rs
src/param/basis_set/: basis_de_dloge.rs  basis_precision.rs  cut_off_energy.rs  fine_gmax.rs  fine_grid_scale.rs  finite_basis_corr.rs  finite_basis_npoints.rs  finite_basis_spacing.rs  fixed_npw.rs  grid_scale.rs  mod.rs
src/param/density_mixing_params/: mix_charge_amp.rs  mix_charge_gmax.rs  mix_cut_off_energy.rs  mix_history_length.rs  mix_metric_q.rs  mix_spin_amp.rs  mix_spin_gmax.rs  mixing_scheme.rs  mod.rs
src/param/electro_min/: efermi_tol.rs  elec_convergence_win.rs  elec_dump_file.rs  elec_eigenvalue_tol.rs  elec_energy_tol.rs  elec_restore_file.rs  electronic_minimizer.rs  fix_occupancy.rs  max_cg_steps.rs  max_scf_cycles.rs  max_sd_steps.rs  metals_method.rs  mod.rs  num_dump_cycles.rs  num_occ_cycles.rs  smearing_scheme.rs  smearing_width.rs  spin_fix.rs
src/param/electronic/: charge.rs  mod.rs  spin.rs  spin_polarised.rs
src/param/general/: backup_setting.rs  calculate_props.rs  castep_task.rs  charge_unit.rs  checkpoint.rs  comment.rs  continuation.rs  data_distribution.rs  mod.rs  opt_strategy.rs  page_wvfns.rs  print_clock.rs  print_memory_usage.rs  rand_seed.rs  run_time.rs  stop.rs  write_checkpoint.rs  write_props.rs
src/param/geom_opt/: geom_convergence_win.rs  geom_disp_tol.rs  geom_energy_tol.rs  geom_force_tol.rs  geom_frequency_est.rs  geom_max_iter.rs  geom_method.rs  (+5 more)
src/seed/: mod.rs  seed_folder.rs  seed_setup.rs
(+36 files in other folders)
