[package]
name = "castep-seeding"
version = "0.1.0"
edition = "2021"

[dependencies]
castep-periodic-table = "0.5.2"
castep-cell-io = "0.2.11"
glob = "0.3.1"
thiserror = "2.0.8"
serde = { version = "1.0.217", features = ["derive"] }
derive_builder = "0.20.2"
castep-seeding-derive = { version = "0.1.0", path = "castep-seeding-derive" }

[features]
default = ["template"]
template =[]
