[package]
name = "castep-seeding"
version = "0.1.1"
edition = "2021"

[dependencies]
castep-periodic-table = "0.5.2"
castep-cell-io = "0.2.11"
castep-param-io = "0.1.1"
glob = "0.3.1"
thiserror = "2.0.8"
serde = { version = "1.0.217", features = ["derive"] }

[features]
default = ["template"]
template =[]
md = []
optics = []
ts_search = []
phonon = []
elec_field = []
nmr = []
elec_excitations=[]
solvation_energy = []
