[package]
name = "castep-seeding-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
castep-cell-io = "0.2.18"
castep-param-io = "0.1.2"
castep-seeding = {path = "../"}
indicatif = { version = "0.17.11", features = ["rayon"] }
rayon = "1.10.0"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
